Improved OutputFile tests