@@ -1,18 +1,18 @@
 package output;
 
 import java.io.BufferedWriter;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 
 /**
  * The {@code OutputFile} class implements the {@code Output} interface to write output lines to a specified file.
  * It appends each output line to the end of the file, ensuring that previous content is not overwritten.
  */
 public class OutputFile implements Output {
-    private final String filePath;
-
+    public final Path filePath;
     /**
      * Constructs a new {@code OutputFile} instance with the specified file path.
      *
@@ -20,12 +20,7 @@ public class OutputFile implements Output {
      *                 and output lines will be appended if the file already exists.
      */
     public OutputFile(String filePath) {
-        try {
-            Files.deleteIfExists(Path.of(filePath));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        this.filePath = filePath;
+        this.filePath = Paths.get(filePath);
     }
 
     /**
@@ -37,11 +32,11 @@ public class OutputFile implements Output {
      */
     @Override
     public void outputLine(String line) {
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath, true))) {
+        try (BufferedWriter writer = Files.newBufferedWriter(filePath, StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
             writer.write(line);
             writer.newLine();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Failed to write to file: " + filePath, e);
         }
     }
 }
